menu button collapsed fix

--- a/frontend/src/Shrunk.less
+++ b/frontend/src/Shrunk.less
@@ -3,9 +3,14 @@
 }
 
 .header {
+  max-width: 100%;
+}
+
+.navbar {
   display: flex;
   flex-direction: row;
-  //flex-wrap: nowrap;
+  justify-content: flex-start;
+  max-width: 100%;
 }
 
 .logo {
@@ -21,6 +26,11 @@
 .role {
   color: white;
   pointer-events: none;
+}
+
+.user-name{
+  margin-right: 10px;
+  float: right;
 }
 
 .logout-menu {
